--- a/portfolio/indexx.html
+++ b/portfolio/indexx.html
@@ -317,7 +317,6 @@
 				document.getElementById("loading_note").innerHTML = "点击免费膜Aufun"
 				document.getElementById("loading_bar").style.width = '100vw'
 				document.getElementById("start").onclick = start
-				document.getElementById("busuanzi").src = 'https://busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js'
 				document.getElementById("aufun_music").src = 'https://music.163.com/outchain/player?type=0&id=2275415823&auto=1&height=90'
 			}
 		</script>
@@ -354,7 +353,7 @@
 				<div id="aufun" onclick="alert(sayings[Math.floor(Math.random()*sayings.length)])"></div>
 			</div>
 		</div>
-        	<script id="busuanzi"></script>
+        	<script src="https://busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
 		<div id="makers" title="制作者们" onclick="maker_switch()">
 			<div id="power_by_wrap">
 				<div id="arrow">
