--- a/tags.html
+++ b/tags.html
@@ -133,6 +133,8 @@ header-img: "img/3.jpg"
 				<a href="#分数规划" title="分数规划" rel="1">分数规划</a>
 				
 				<a href="#构造" title="构造" rel="1">构造</a>
+				
+				<a href="#启发式合并" title="启发式合并" rel="1">启发式合并</a>
 			</div>
 
             <!-- 标签列表 -->
