--- a/about.html
+++ b/about.html
@@ -6,16 +6,9 @@ header-img: "img/2.jpg"
 multilingual: true
 ---
 
-<p><center><strong>我？一个高中小蒟蒻</center></p>
-
-<p><center>因为弱的一匹，天天被机房里的dalao吊打</center></p>
-
-<p><center>懂一点OI竞赛方面算法和数据结构</center></p>
+<p><center>在退役边缘徘徊的SD蒟蒻</center></p>
 
 <p><center>QQ:2297349251</center></p>
   
-<p><center>欢迎dalao加我友链</center></p>
-  
-<p><center><strong>emmm最后放张图Orz Refun大爷</center></p>
+<p><center>欢迎加友链qaq</center></p>
 
-<p><center><img src="https://raw.githubusercontent.com/A-Failure/A-Failure.github.io/master/img/0.jpg" alt="" /></center></p>
