--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -21,5 +21,5 @@ layout: default
 			</header>
 		</div>
 	</body>
-	<p><center><a href="https://a-failure.github.io/portfolio/indexx.html"><p>Aufun!</p><!--<img src="https://a-failure.github.io/img/iss.jpg" width="600" height="400" border="0">--></a></center></p>
+	<p><center><a href="https://a-failure.github.io/portfolio/indexx.html"><p>I Want To Orz Aufun!</p><!--<img src="https://a-failure.github.io/img/iss.jpg" width="600" height="400" border="0">--></a></center></p>
 </html>
