--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "About"
 description: "Dispwnl"
-header-img: "img/2.jpg"
+header-img: "img/qaq/2.jpg"
 multilingual: true
 ---
 
