--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -16,7 +16,7 @@ layout: default
 	<body>
 		<div class="container" style="margin:0;padding:0;width:100%;">
 			<header>
-				<img width="175" height="175" style="border-radius:50%;" src="/img/1.jpg">
+				<img width="175" height="175" style="border-radius:50%;" src="/img/qaq/1.jpg">
 				<h1>Dispwnl</h1>
 			</header>
 		</div>
