--- a/about.html
+++ b/about.html
@@ -12,12 +12,10 @@ multilingual: true
 
 <p><center>欢迎加友链qaq</center></p>
 
-```
-____   _                         _ 
+<code>____   _                         _ 
 |  _ \(_)___ _ ____      ___ __ | |
 | | | | / __| '_ \ \ /\ / / '_ \| |
 | |_| | \__ \ |_) \ V  V /| | | | |
 |____/|_|___/ .__/ \_/\_/ |_| |_|_|
-            |_|                   
-```
+            |_|                   </code>
 
