--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 description: "你来到了没有知识的荒原 :("
-header-img: "img/404-bg.jpg"
+header-img: "img/qaq/404-bg.jpg"
 permalink: /404.html
 ---
 
@@ -13,6 +13,7 @@ permalink: /404.html
 			<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
 				<div class="site-heading" id="tag-heading">
 					<h1>404</h1>
+					<h3>挺遗憾</h3>
 					<span class="subheading">{{ page.description }}</span>
 				</div>
 			</div>
