--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@ permalink: /404.html
 			<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
 				<div class="site-heading" id="tag-heading">
 					<h1>404</h1>
-					<h3>挺遗憾</h3>
+					<h3>不得不说这挺遗憾的</h3>
 					<span class="subheading">{{ page.description }}</span>
 				</div>
 			</div>
