--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-description: "你来到了没有知识的荒原 :("
+description: "但是我甚至有点幸灾乐祸 :)"
 header-img: "img/qaq/404-bg.jpg"
 permalink: /404.html
 ---
@@ -13,7 +13,8 @@ permalink: /404.html
 			<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
 				<div class="site-heading" id="tag-heading">
 					<h1>404</h1>
-					<h3>不得不说这挺遗憾的</h3>
+					<h3>你来到了没有知识的荒原 :(</h3>
+					<h4>不得不说这挺遗憾的</h3>
 					<span class="subheading">{{ page.description }}</span>
 				</div>
 			</div>
