--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-description: "但是我甚至有点幸灾乐祸 :)"
+description: "不得不说这挺遗憾的"
 header-img: "img/qaq/404-bg.jpg"
 permalink: /404.html
 ---
@@ -14,7 +14,7 @@ permalink: /404.html
 				<div class="site-heading" id="tag-heading">
 					<h1>404</h1>
 					<h3>你来到了没有知识的荒原 :(</h3>
-					<h4>不得不说这挺遗憾的</h4>
+					<h6>但是我甚至有点幸灾乐祸 :)</h6>
 					<span class="subheading">{{ page.description }}</span>
 				</div>
 			</div>
