--- a/tags.html
+++ b/tags.html
@@ -139,6 +139,10 @@ header-img: "img/qaq/3.jpg"
 				<a href="#FFT/NTT" title="FFT/NTT" rel="3">FFT/NTT</a>
 				
 				<a href="#FWT" title="FWT" rel="1">FWT</a>
+
+				<a href="#拉格朗日插值" title="拉格朗日插值" rel="2">拉格朗日插值</a>
+
+				<a href="#生成函数" title="生成函数" rel="1">生成函数</a>
 				
 				<p><strong>计算几何</strong></p>
 	
