--- a/portfolio/indexx.html
+++ b/portfolio/indexx.html
@@ -477,7 +477,8 @@
       <div id="tip1" class="tip-show">请务必在闲暇时间食用</div>
       <div id="tip2">初次从GitHub上加载图片需要一段时间qwq</div>
       <div id="tip3" style="transform-origin: 50% 16px;">
-        <span id="busuanzi_container_page_pv">你是第<span id="busuanzi_value_page_pv"></span>个朝圣者！快膜Aufun来获得Au爷无穷RP的力量吧！</span>
+        <span id="busuanzi_container_page_pv">快膜Aufun来获得Au爷无穷RP的力量吧！</span>
+        <p>另：此页有彩蛋哦<del>为什么不加入膜拜队伍一同跪拜呢</del></p>
       </div>
     </div>
   </div>
