--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@ header-img: "img/qaq/2.jpg"
 multilingual: true
 ---
 
-<p><center>一个菜逼/center></p>
+<p><center>一个菜逼</center></p>
 
 <p><center>QQ:2297349251</center></p>
 
